# starquill-k8s-pki-manager

./: .gitignore  Cargo.toml  README.md  cluster_config_example.json
src/: main.rs  types.rs  web.rs
src/app/: manager.rs  mod.rs  run.rs
src/cert/: api_server.rs  ca.rs  controller.rs  controller_manager.rs  kubelet.rs  mod.rs  node.rs  openssl.rs  operations.rs  scheduler.rs  service_account.rs  types.rs  verification.rs
src/config/: editor.rs  mod.rs  types.rs
src/discovery/: discover.rs  kubeconfig.rs  mod.rs  ssh.rs
src/kubeconfig/: encryption.rs  kube.rs  mod.rs
src/metrics/: collector.rs  mod.rs
src/ui/: loading.rs  mod.rs  onboarding.rs  render.rs  styles.rs
src/utils/: constants.rs  logging.rs  mod.rs
webapp/: index.html  package-lock.json  package.json  tailwind.config.js
webapp/src/: App.jsx  Layout.jsx  main.jsx  routes.jsx
webapp/src/components/: ActivityItem.jsx  CertificateList.jsx  CertificateStats.jsx  ChatInput.jsx  ClusterControls.jsx  ClusterVisualization.jsx  ClusterVisualization.tsx  ConnectionLines.jsx  ControlPlaneMetrics.jsx  CustomAlert.jsx  CustomTooltip.jsx  Header.jsx  MetricCard.jsx  Modal.jsx  NodeCard.jsx  NodeRenderer.jsx  Notification.jsx  NotificationBell.jsx  Sidebar.jsx  VisualizationContainer.jsx
webapp/src/components/Modals/: NodeModal.jsx
webapp/src/components/ui/: Button.jsx  SidebarItem.jsx  StatusBadge.jsx  Tooltip.jsx
webapp/src/pages/: Certificates.jsx  ControlPlane.jsx  Dashboard.jsx  Settings.jsx  WorkerNodes.jsx
webapp/src/styles/: index.css
