[package]
name = "tui-k8s-certs"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.132"
glob = "0.3.1"
shellexpand = "3.1.0"
clap = { version = "4.5.20", features = ["derive"] }
base64 = "0.22.1"

